@@ -5,6 +5,7 @@ examples/ex2.pl
 examples/ex3.pl
 images/ex3.png
 inc/Module/Install.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -22,11 +23,11 @@ META.yml
 README
 share/bucharest-map.xml
 SIGNATURE
-t/Map-Tube-Bucharest/00-use.t
-t/Map-Tube-Bucharest/01-version.t
-t/Map-Tube-Bucharest/02-pod_coverage.t
-t/Map-Tube-Bucharest/03-pod.t
-t/Map-Tube-Bucharest/04-map.t
-t/Map-Tube-Bucharest/05-get_shortest_route.t
-t/Map-Tube-Bucharest/06-name.t
-t/Map-Tube-Bucharest/07-xml.t
+t/Map-Tube-Bucharest/01-use.t
+t/Map-Tube-Bucharest/02-version.t
+t/Map-Tube-Bucharest/03-map.t
+t/Map-Tube-Bucharest/04-get_shortest_route.t
+t/Map-Tube-Bucharest/05-name.t
+t/Map-Tube-Bucharest/06-xml.t
+xt/Map-Tube-Bucharest/01-pod_coverage.t
+xt/Map-Tube-Bucharest/02-pod.t
