@@ -1,5 +1,6 @@
 0.06
  - Fix Test::Map::Tube and planning of tests.
+ - Move author tests to xt/ directory.
  - Rewrite SEE ALSO section to new style.
  - Update Module::Install to 1.16 version.
 
